--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-toolbar [title]="'100 Angular Challanges'"></app-toolbar>
+<app-toolbar [title]="'100 Angular Challanges'">
+  <ul>
+    <li>Components</li>
+    <li>Directives</li>
+    <li>Services</li>
+    <li>Pipes</li>
+    <li>Other</li>
+  </ul>
+</app-toolbar>
