--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,6 +41,16 @@ textarea {
   --orange: #c97e5a;
   --yellow: #e5e510;
   --red: #ff6058;
-  --tablet: 768px;
+  --background-color: #252525;
+  --secondary-background: #2b2b2b;
+  --tertiary-background: #393939;
+  --quaternary-background: #232323;
   --mobile: 425px;
+}
+
+$tablet: 768px;
+@mixin box-shadow {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
+    0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
