Created basic card component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,6 @@
     <li>Other</li>
   </ul>
 </app-toolbar>
+<app-card [iconClasses]="'fas fa-info-circle'" [title]="'Card'" [subtitle]="'Components'">
+
+</app-card>
