Changed to rem and styled a card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,6 @@
   </ul>
 </app-toolbar>
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Card'" [subtitle]="'Components'">
-
+<p footer>Footer Content</p>
+<p body>Body Content</p>
 </app-card>
