--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,1 +1,16 @@
-<p>card works!</p>
+<div class="card-container">
+  <div class="header">
+    <i *ngIf="iconClasses" [class]="iconClasses"></i>
+    <div class="title">
+      <h5>{{title}}</h5>
+      <h6>{{subtitle}}</h6>
+    </div>
+  </div>
+  <div class="body">
+    <ng-content select="[body]"></ng-content>
+  </div>
+
+  <div class="footer">
+    <ng-content select="[footer]"></ng-content>
+  </div>
+</div>
