--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,12 +5,16 @@
 * {
   margin: 0;
   box-sizing: border-box;
-  font-family: "Raleway", sans-serif;
-  scroll-behavior: smooth;
 }
 
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
 body {
-  margin: 10px;
+  margin: 1rem;
+  font-size: 1.6rem;
+  font-family: "Raleway", sans-serif;
 }
 
 h1,
@@ -20,7 +24,8 @@ h4,
 h5,
 h6 {
   font-family: "Montserrat", sans-serif;
-  font-weight: bold;
+  font-weight: 700;
+  font-size: 1.7rem;
 }
 
 a {
@@ -41,14 +46,15 @@ textarea {
   --orange: #c97e5a;
   --yellow: #e5e510;
   --red: #ff6058;
+  --white: #ffffff;
   --background-color: #252525;
   --secondary-background: #2b2b2b;
   --tertiary-background: #393939;
   --quaternary-background: #232323;
-  --mobile: 425px;
 }
 
 $tablet: 768px;
+$mobile: 42.5px;
 @mixin box-shadow {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
     0 1px 2px rgba(0, 0, 0, 0.24);
