--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,10 @@
     <li>Other</li>
   </ul>
 </app-toolbar>
+<app-card [iconClasses]="'fas fa-info-circle'" [title]="'Accordian'" [subtitle]="'Components'">
+
+</app-card>
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Card'" [subtitle]="'Components'">
-<p footer>Footer Content</p>
-<p body>Body Content</p>
+  <p footer>Footer Content</p>
+  <p body>Body Content</p>
 </app-card>
