Added accordian model and basic input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,9 @@
   </ul>
 </app-toolbar>
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Accordian'" [subtitle]="'Components'">
+<app-accordian>
 
+</app-accordian>
 </app-card>
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Card'" [subtitle]="'Components'">
   <p footer>Footer Content</p>
