Passing data correctly

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   </ul>
 </app-toolbar>
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Accordian'" [subtitle]="'Components'">
-<app-accordian>
+<app-accordian body [items]="accoridanItems">
 
 </app-accordian>
 </app-card>
