--- a/src/app/components/accordian/accordian.component.html
+++ b/src/app/components/accordian/accordian.component.html
@@ -1,1 +1,7 @@
-<p>accordian works!</p>
+<div class="accordian-container">
+  <div class="item" *ngFor="let item of items">
+    <div class="header">
+      <h4>{{item.title }}</h4>
+    </div>
+  </div>
+</div>
