--- a/src/app/components/accordian/accordian.component.html
+++ b/src/app/components/accordian/accordian.component.html
@@ -2,6 +2,10 @@
   <div class="item" *ngFor="let item of items">
     <div class="header">
       <h4>{{item.title }}</h4>
+      <i class="fas fa-chevron-down" [class.is-expanded]="item.isExpanded" (click)="toggle(item)"></i>
+    </div>
+    <div class="content">
+      <p>{{item.content}}</p>
     </div>
   </div>
 </div>
