--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,7 @@ textarea {
   --secondary-background: #2b2b2b;
   --tertiary-background: #393939;
   --quaternary-background: #232323;
+  --padding: 1rem 2rem;
 }
 
 $tablet: 768px;
