Added component and default styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,15 @@
     <li>Other</li>
   </ul>
 </app-toolbar>
-<app-card [iconClasses]="'fas fa-info-circle'" [title]="'Accordian'" [subtitle]="'Components'">
-<app-accordian body [items]="accoridanItems">
-
-</app-accordian>
+<app-card>
+  <app-progressbar body></app-progressbar>
+  <button footer (click)="progressValue = 75;">Update</button>
 </app-card>
+
+<app-card [iconClasses]="'fas fa-info-circle'" [title]="'Accordian'" [subtitle]="'Components'">
+<app-accordian body [items]="accoridanItems"></app-accordian>
+</app-card>
+
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Card'" [subtitle]="'Components'">
   <p footer>Footer Content</p>
   <p body>Body Content</p>
