--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   </ul>
 </app-toolbar>
 <app-card>
-  <app-progressbar body></app-progressbar>
+  <app-progressbar body [value]="progressValue"></app-progressbar>
   <button footer (click)="progressValue = 75;">Update</button>
 </app-card>
 
