--- a/src/app/components/progressbar/progressbar.component.scss
+++ b/src/app/components/progressbar/progressbar.component.scss
@@ -13,7 +13,14 @@
     width: 100%;
     height: 1.5rem;
     background-color: #eee;
-    border-radius: 2rem;
     transition: all 1s;
+  }
+  progress[value]::-webkit-progress-value {
+    background-color: var(--blue);
+    transition: all 3s;
+  }
+  progress[value]::-webkit-progress-bar,
+  progress[value]::-webkit-progress-value{
+    border-radius: 2rem;
   }
 }
