--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,10 @@
     <li>Other</li>
   </ul>
 </app-toolbar>
-<app-card>
+<app-card [iconClasses]="'fas fa-info-circle'" [title]="'Star Rating'" [subtitle]="'Components'">
+  <app-star-rating body [rating]=".4"></app-star-rating>
+</app-card>
+<app-card [iconClasses]="'fas fa-info-circle'" [title]="'Progressbar'" [subtitle]="'Components'">
   <app-progressbar body [value]="progressValue"></app-progressbar>
   <button footer (click)="progressValue = 75;">Update</button>
 </app-card>
