--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   </ul>
 </app-toolbar>
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Star Rating'" [subtitle]="'Components'">
-  <app-star-rating body [rating]=".4"></app-star-rating>
+  <app-star-rating body [rating]="3.6"></app-star-rating>
 </app-card>
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Progressbar'" [subtitle]="'Components'">
   <app-progressbar body [value]="progressValue"></app-progressbar>
