--- a/src/app/components/top-of-page/top-of-page.component.html
+++ b/src/app/components/top-of-page/top-of-page.component.html
@@ -1,1 +1,3 @@
-<button (click)="goToTop()">Hello</button>
+<button [class.is-shown]="isShown" (click)="goToTop()">
+  <i [class.is-shown]="isShown" class="fas fa-chevron-up"></i>
+</button>
