Removed a trailing character

--- a/src/app/components/star-rating/star-rating.component.html
+++ b/src/app/components/star-rating/star-rating.component.html
@@ -1,5 +1,5 @@
-<div title="title">
-  < <i class="fas fa-star" *ngFor="let star of fullStars"></i>
+<div class="title">
+  <i class="fas fa-star" *ngFor="let star of fullStars"></i>
     <i class="fas fa-star-half-alt" *ngIf="hasHalfStar"></i>
     <i class="far fa-star" *ngFor="let star of emptyStars"></i>
 </div>
