Added loader Component

--- a/src/app/components/component-documentation/component-documentation.component.html
+++ b/src/app/components/component-documentation/component-documentation.component.html
@@ -1,3 +1,8 @@
+
+<app-card [iconClasses]="'fas fa-info-circle'" [title]="'Loading'" [subtitle]="'Components'">
+ <app-loader></app-loader>
+</app-card>
+
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Star Rating'" [subtitle]="'Components'">
   <app-star-rating body [rating]="3.6" [maxRating]="5"></app-star-rating>
 </app-card>
