--- a/src/app/components/loader/loader.component.html
+++ b/src/app/components/loader/loader.component.html
@@ -1,1 +1,8 @@
-<p>loader works!</p>
+<div class="loader-overlay">
+  <div class="loader-container">
+    <div class="loader">
+      <div class="circular">
+      </div>
+    </div>
+  </div>
+</div>
