--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,7 +46,8 @@ textarea {
   --orange: #c97e5a;
   --yellow: #e5e510;
   --red: #ff6058;
-  --white: #ffffff;
+  --white: #fff;
+  --lightGrey: #eee;
   --background-color: #252525;
   --secondary-background: #2b2b2b;
   --tertiary-background: #393939;
