--- a/src/app/components/loader/loader.component.html
+++ b/src/app/components/loader/loader.component.html
@@ -1,4 +1,4 @@
-<div class="loader-overlay">
+<div class="loader-overlay" [style.display]="isLoading ? 'block' : 'none'">
   <div class="loader-container">
     <div class="loader">
       <div class="circular">
