Added different tests

--- a/src/app/pipes/pipe-documentation/pipe-documentation.component.html
+++ b/src/app/pipes/pipe-documentation/pipe-documentation.component.html
@@ -5,8 +5,8 @@
 </app-card>
 <app-card [iconClasses]="'fas fa-info-cricle'" [title]="'Credit Card Formatter'" [subtitle]="'Pipes'">
   <div body>
-    <p>{{'1111222233334444'}}</p>
-    <p>{{'1111111111111111111111111111'}}</p>
-    <p>{{'a111222233334444'}}</p>
+    <p>{{'1111222233334444' | credircardFormatter}}</p>
+    <p>{{'1111111111111111111111111111' | credircardFormatter}}</p>
+    <p>{{'a111222233334444' | credircardFormatter}}</p>
   </div>
 </app-card>
