--- a/src/app/components/component-documentation/component-documentation.component.html
+++ b/src/app/components/component-documentation/component-documentation.component.html
@@ -1,4 +1,8 @@
 
+<app-card [iconClasses]="'fas fa-info-circle'" [title]="'Credit Card Input'" [subtitle]="'Components'">
+ <app-credit-card-input></app-credit-card-input>
+</app-card>
+
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Loading'" [subtitle]="'Components'">
  <app-loader body [isLoading]="false"></app-loader>
 </app-card>
