Added basic structure and markup

--- a/src/app/components/credit-card-input/credit-card-input.component.html
+++ b/src/app/components/credit-card-input/credit-card-input.component.html
@@ -1,1 +1,5 @@
-<p>credit-card-input works!</p>
+<div class="credit-card-input-container">
+  <div class="input-container">
+    <input type="text" required maxlength="16">
+  </div>
+</div>
