--- a/src/app/components/credit-card-input/credit-card-input.component.html
+++ b/src/app/components/credit-card-input/credit-card-input.component.html
@@ -1,5 +1,5 @@
 <div class="credit-card-input-container">
   <div class="input-container">
-    <input type="text" required maxlength="16">
+    <input type="text" [(ngModel)]="creditCardNumber" required maxlength="16" [readOnly]="isReadOnly">
   </div>
 </div>
