--- a/src/app/components/credit-card-input/credit-card-input.component.html
+++ b/src/app/components/credit-card-input/credit-card-input.component.html
@@ -5,6 +5,7 @@
       <i *ngSwitchCase="'4'" class="fab fa-cc-visa"></i>
       <i *ngSwitchCase="'5'" class="fab fa-cc-mastercard"></i>
       <i *ngSwitchCase="'6'" class="fab fa-cc-discover"></i>
+      <i *ngSwitchDefault class="fas fa-credit-card"></i>
     </ng-container>
     <input type="text" [(ngModel)]="creditCardNumber" required maxlength="16" [readOnly]="isReadOnly">
   </div>
