--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,10 @@ h6 {
   font-size: 1.7rem;
 }
 
+h1 {
+  font-size: 3rem;
+  font-weight: 900;
+}
 a {
   color: inherit;
   text-decoration: none;
@@ -58,7 +62,14 @@ textarea {
 $tablet: 768px;
 $mobile: 42.5px;
 @mixin box-shadow {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
-    0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.hr {
+  border-top: 1px solid var(--black);
+  margin: 0 0 2rem 0;
+}
+.title {
+  margin: 1.5rem 0;
 }
