--- a/src/app/components/loader/loader.component.html
+++ b/src/app/components/loader/loader.component.html
@@ -2,7 +2,7 @@
   <div class="loader-container">
     <div class="loader">
       <ng-container [ngSwitch]="loaderType">
-        <h1 *ngSwitchCase="LoaderType.Loading">Loading</h1>
+        <h1 *ngSwitchCase="LoaderType.Loading">{{loadingText}}</h1>
         <div class="circular" *ngSwitchCase="LoaderType.Circular"></div>
       </ng-container>
     </div>
