--- a/src/app/components/component-documentation/component-documentation.component.html
+++ b/src/app/components/component-documentation/component-documentation.component.html
@@ -8,7 +8,7 @@
 </app-card>
 
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Loading'" [subtitle]="'Components'">
-  <app-loader body [isLoading]="true" [loaderType]="loaderType"></app-loader>
+  <app-loader body [isLoading]="false" [loaderType]="loaderType"></app-loader>
 </app-card>
 
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Star Rating'" [subtitle]="'Components'">
