--- a/src/app/components/component-documentation/component-documentation.component.html
+++ b/src/app/components/component-documentation/component-documentation.component.html
@@ -1,5 +1,8 @@
 <h1 class="title">Components</h1>
 <div class="hr"></div>
+<app-card [iconClasses]="'fas fa-info-circle'" [title]="'LinkedIn Post'" [subtitle]="'Components'">
+<app-linkedin-post body></app-linkedin-post>
+</app-card>
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Twitter Post'" [subtitle]="'Components'">
 <app-twitter-post body></app-twitter-post>
 </app-card>
