--- a/src/app/components/component-documentation/component-documentation.component.html
+++ b/src/app/components/component-documentation/component-documentation.component.html
@@ -1,10 +1,18 @@
 <h1 class="title">Components</h1>
 <div class="hr"></div>
+<app-card [iconClasses]="'fas fa-info-circle'" [title]="'Modal'" [subtitle]="'Components'">
+  <div body>
+    <app-modal [title]="'Modal Example'">
+      <p>Some Content</p>
+    </app-modal>
+    <div footer></div>
+  </div>
+</app-card>
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'LinkedIn Post'" [subtitle]="'Components'">
-<app-linkedin-post body></app-linkedin-post>
+  <app-linkedin-post body></app-linkedin-post>
 </app-card>
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Twitter Post'" [subtitle]="'Components'">
-<app-twitter-post body></app-twitter-post>
+  <app-twitter-post body></app-twitter-post>
 </app-card>
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Credit Card Input'" [subtitle]="'Components'">
   <div body>
