Added modal markup

--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,1 +1,9 @@
-<p>modal works!</p>
+<div class="modal-container">
+  <div class="modal-header">
+    <h5>{{title}}</h5>
+    <i class="fas fa-times"></i>
+  </div>
+  <div class="modal-body">
+    <ng-content></ng-content>
+  </div>
+</div>
