--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,4 +1,4 @@
-<div class="modal-container">
+<div class="modal-container" [class.isHidden]=isHidden>
   <div class="modal-header">
     <h5>{{title}}</h5>
     <i class="fas fa-times"></i>
