Modal now opens and closes correctly with overlay

--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -8,4 +8,4 @@
   </div>
 </div>
 
-<div class="modal-overlay"></div>
+<div class="modal-overlay" (click)="close()" [class.isHidden]="isHidden"></div>
