--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -23,3 +23,20 @@
     display: none;
   }
 }
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 1;
+  z-index: 2;
+  transition: opacity 0.3s;
+
+  &.isHidden {
+    z-index: -1;
+    opacity: 0;
+  }
+}
