--- a/src/app/components/component-documentation/component-documentation.component.html
+++ b/src/app/components/component-documentation/component-documentation.component.html
@@ -1,5 +1,10 @@
 <h1 class="title">Components</h1>
 <div class="hr"></div>
+
+<app-card [iconClasses]="'fas fa-info-circle'" [title]="'Quote'" [subtitle]="'Components'">
+  <app-quote body></app-quote>
+</app-card>
+
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Modal'" [subtitle]="'Components'">
   <div body>
     <app-modal [title]="'Modal Example'" #modal>
