Quote, author and occupation now passed

--- a/src/app/components/component-documentation/component-documentation.component.html
+++ b/src/app/components/component-documentation/component-documentation.component.html
@@ -2,7 +2,8 @@
 <div class="hr"></div>
 
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Quote'" [subtitle]="'Components'">
-  <app-quote body></app-quote>
+  <app-quote body [quote]="'The Force is strong with this one.'" [author]="'Darth Vader'" [occupation]="'Sith Lord'">
+  </app-quote>
 </app-card>
 
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Modal'" [subtitle]="'Components'">
