--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -1,1 +1,8 @@
-<p>quote works!</p>
+<blockquote>
+  <i class="fas fa-quote-left"></i>
+  <p class="quote">{{quote}}</p>
+  <footer>
+    <p class="author">{{author}}</p>
+    <p class="occupation">{{occupation}}</p>
+  </footer>
+</blockquote>
