Started styling quote component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,7 @@ textarea {
 :root {
   --green: #40c980;
   --blue: #007acc;
+  --lightBlue: #0099ff;
   --black: #1e1e1e;
   --light-grey: #929293;
   --orange: #c97e5a;
