--- a/src/app/components/component-documentation/component-documentation.component.html
+++ b/src/app/components/component-documentation/component-documentation.component.html
@@ -1,6 +1,9 @@
 <h1 class="title">Components</h1>
 <div class="hr"></div>
 
+<app-card [iconClasses]="'fas fa-info-circle'" [title]="'Toggle'" [subtitle]="'Components'">
+  <app-toggle [isOn]="toggleValue" #body></app-toggle>
+</app-card>
 <app-card [iconClasses]="'fas fa-info-circle'" [title]="'Quote'" [subtitle]="'Components'">
   <app-quote body [quote]="'The Force is strong with this one.'" [author]="'Darth Vader'" [occupation]="'Sith Lord'">
   </app-quote>
