--- a/src/app/components/toggle/toggle.component.html
+++ b/src/app/components/toggle/toggle.component.html
@@ -1,3 +1,3 @@
 <div class="toggle-container" (click)="toggle()">
-  <div class="toggle-value"></div>
+  <div class="toggle-value" [class.isOff]="!isOn"></div>
 </div>
